--- a/analyze_loc_matches_local.ipynb
+++ b/analyze_loc_matches_local.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3f7962e2-b7e9-4fce-9e68-abf3139f9ba3",
    "metadata": {},
    "outputs": [],
@@ -49,22 +49,23 @@
     "#df_occ = pd.read_csv('r-dale-thomas-all-seinet-texas-bels.csv', low_memory=False)\n",
     "#df_occ = pd.read_csv('torch_bels_locs.csv', low_memory=False, sep='\\t')\n",
     "# BRIT UT test\n",
-    "df_occ = pd.read_csv('data_tsv/torch_bels_locs.tsv', low_memory=False, sep='\\t')"
+    "#df_occ = pd.read_csv('data_tsv/torch_bels_locs.tsv', low_memory=False, sep='\\t')\n",
+    "df_occ = pd.read_csv('BELS_test_XXX.tsv', low_memory=False, sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "c3de6262-33d4-4dc4-a292-92b759b36714",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1144047, 62)"
+       "(6181, 105)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cfc2b0e4-a79b-4ffd-8635-6baa27a9d12c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9e63d2a7-cb74-4062-83d8-62f899bfd4e7",
    "metadata": {},
    "outputs": [],
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "bb4b35d4-dd6d-4de5-a3fa-5809c4638bcf",
    "metadata": {},
    "outputs": [],
@@ -108,17 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "d8ce3fd1-65a5-4901-b8a6-c7a74eb54116",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1144047, 62)"
+       "(6181, 75)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,13 +130,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "34cca590-0b35-4c4f-9a15-52e100471905",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot take a larger sample than population when 'replace=False'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#create a sample\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m df_occ_sample \u001b[38;5;241m=\u001b[39m \u001b[43mdf_occ\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10000\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/media/jbest/data3/BRIT_git/pybels/env/lib/python3.12/site-packages/pandas/core/generic.py:6118\u001b[0m, in \u001b[0;36mNDFrame.sample\u001b[0;34m(self, n, frac, replace, weights, random_state, axis, ignore_index)\u001b[0m\n\u001b[1;32m   6115\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m weights \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   6116\u001b[0m     weights \u001b[38;5;241m=\u001b[39m sample\u001b[38;5;241m.\u001b[39mpreprocess_weights(\u001b[38;5;28mself\u001b[39m, weights, axis)\n\u001b[0;32m-> 6118\u001b[0m sampled_indices \u001b[38;5;241m=\u001b[39m \u001b[43msample\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj_len\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreplace\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   6119\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(sampled_indices, axis\u001b[38;5;241m=\u001b[39maxis)\n\u001b[1;32m   6121\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ignore_index:\n",
+      "File \u001b[0;32m/media/jbest/data3/BRIT_git/pybels/env/lib/python3.12/site-packages/pandas/core/sample.py:152\u001b[0m, in \u001b[0;36msample\u001b[0;34m(obj_len, size, replace, weights, random_state)\u001b[0m\n\u001b[1;32m    149\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    150\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid weights: weights sum to zero\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 152\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchoice\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj_len\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreplace\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mreplace\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mweights\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mastype(\n\u001b[1;32m    153\u001b[0m     np\u001b[38;5;241m.\u001b[39mintp, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    154\u001b[0m )\n",
+      "File \u001b[0;32mnumpy/random/mtrand.pyx:1020\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Cannot take a larger sample than population when 'replace=False'"
+     ]
+    }
+   ],
    "source": [
     "#create a sample\n",
-    "df_occ_sample = df_occ.sample(n=10000)"
+    "#df_occ_sample = df_occ.sample(n=10000)"
    ]
   },
   {
@@ -192,7 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "(804643, 62)"
+       "(4543, 75)"
       ]
      },
      "execution_count": 11,
@@ -244,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "3d5814dd-3986-46a7-b550-264c05a9e797",
    "metadata": {},
    "outputs": [
@@ -254,10 +270,10 @@
      "text": [
       "\n",
       "Original DataFrame:\n",
-      "(804643, 64)\n",
+      "(4543, 77)\n",
       "\n",
       "Filtered DataFrame (locations with at least one set of coordinates):\n",
-      "(494443, 65)\n"
+      "(2201, 78)\n"
      ]
     }
    ],
@@ -312,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "8a3897b5-0b36-4f61-8501-02e11798b623",
    "metadata": {},
    "outputs": [],
@@ -323,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "a0abbfac-1745-4daf-93d1-a062f4767ef2",
    "metadata": {},
    "outputs": [],
@@ -334,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c25d8841-c31c-4b0a-be13-b7505cd3b7ad",
    "metadata": {},
    "outputs": [
@@ -344,10 +360,10 @@
      "text": [
       "\n",
       "Original DataFrame:\n",
-      "(804643, 64)\n",
+      "(4543, 77)\n",
       "\n",
       "Filtered DataFrame (locations with at least one set of coordinates):\n",
-      "(310200, 64)\n"
+      "(2342, 77)\n"
      ]
     }
    ],
@@ -401,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "8cb04c91-7d17-429b-8be1-df15633e6935",
    "metadata": {},
    "outputs": [],
@@ -412,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "d1f12a70-8997-407c-84a7-cdc498679433",
    "metadata": {},
    "outputs": [],
@@ -426,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "12da5e88-0541-430d-9ddb-d4f5d3311d77",
    "metadata": {},
    "outputs": [],
@@ -437,17 +453,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "c4ce0341-1a9a-4f7e-82ce-87ed8826974f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(124587,)"
+       "(726,)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "9cb76bf0-a0a0-4f2c-bb18-dd07166b75f4",
    "metadata": {},
    "outputs": [],
@@ -469,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "c297e01a-fe76-4f38-982c-a33f8b181783",
    "metadata": {},
    "outputs": [],
@@ -490,7 +506,7 @@
     {
      "data": {
       "text/plain": [
-       "(65165,)"
+       "(335,)"
       ]
      },
      "execution_count": 25,
@@ -504,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "6096a3eb-7b9a-450b-919b-ea69cc435d42",
    "metadata": {},
    "outputs": [],
@@ -515,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "0ded16c5-6956-4691-a2fb-403b46a618b5",
    "metadata": {},
    "outputs": [],
@@ -527,17 +543,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "8fca09c5-2be5-42b5-84dc-e3b4724103d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(59422,)"
+       "(391,)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "750a98fa-8c1a-4d46-b506-23de30948f55",
    "metadata": {},
    "outputs": [],
@@ -1472,7 +1488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
