--- a/BELS_Grouper_remerge.ipynb
+++ b/BELS_Grouper_remerge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "76ff62eb-3be3-4916-8534-818ad6604c8e",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "5f4a976c-5a4f-488a-a900-a588728ebaeb",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "da2e0cb3-682d-434a-9906-a8fa9ea96482",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "7e85b183-f886-4044-b76b-6b3fa7f34fb0",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "9e739f08-079b-4bdc-af77-dfcaa4ad6684",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "(20353, 111)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "8a2dfea9-6b94-4be0-a014-b776986725b6",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        " 'id_score']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,17 +196,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "e8b6bcce-80d6-4695-8fe3-79040003b543",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bels_unique = df_input.groupby('bels_location_id').first().reset_index()"
+    "# Make a representative datset with one from each BELS location\n",
+    "df_bels_unique = df_input.groupby('bels_location_id').first().reset_index()\n",
+    "df_bels_unique.to_csv('BELS_Grouper_TEST_bels_representative.tsv', index=False, sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
+   "id": "32ffa379-69d8-46f6-8bfa-7397bc785f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a pre-Grouper version of BELS representative for testing time to process\n",
+    "df_bels_unique_no_grouper = df_bels_unique.drop(columns=['Group_ID','Sub_Group_ID','id_score'])\n",
+    "df_bels_unique_no_grouper.to_csv('BELS_Grouper_TEST_bels_representative_no_grouper.tsv', index=False, sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "4ecf2fe2-2dfc-4fb1-b019-9931f9937857",
    "metadata": {},
    "outputs": [
@@ -216,7 +230,7 @@
        "(7014, 111)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,18 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "e4a4973d-99b6-41f7-b509-53193b4f69a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a \"pre Grouper\" sample file to test with\n",
-    "df_ungrouped = df_input.drop(columns=['Group_ID','Sub_Group_ID','id_score'])"
+    "df_ungrouped = df_input.drop(columns=['Group_ID','Sub_Group_ID','id_score'])\n",
+    "df_ungrouped.to_csv('BELS_Grouper_TEST_pre_grouper.tsv', index=False, sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "1b736ae5-ac66-42a9-9424-7aa49a5b0e2f",
    "metadata": {},
    "outputs": [
@@ -248,7 +263,7 @@
        "(20353, 108)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "9a8b497f-2373-4ebd-95ff-d27cf32924fb",
    "metadata": {},
    "outputs": [],
@@ -275,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "0cdb4fe1-b763-4d5d-bd53-df7750f3c29c",
    "metadata": {},
    "outputs": [
@@ -285,7 +300,7 @@
        "(20353, 111)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "3373eca2-14a4-46db-80ff-13f6a7f159cd",
    "metadata": {},
    "outputs": [],
